process query with related entities in MongoDataAccess make MongoDataQueryClientTest process aggregation only